# tx-engine-rs

./: .gitignore  AI_USAGE.md  Cargo.toml  PERFORMANCE.md  README.md
.github/workflows/: ci.yml
benches/: throughput.rs
src/: error.rs  lib.rs  main.rs  telemetry.rs
src/domain/: account.rs  mod.rs  transaction.rs
src/engine/: logic.rs  mod.rs  orchestration.rs
src/input/: mod.rs  tests.rs
src/output/: mod.rs  tests.rs
tests/: integration.rs
tests/chargeback/: mod.rs
tests/data/: representative.csv  representative_expected.csv  two_deposits_expected.csv
tests/deposit/: mod.rs
tests/dispute/: mod.rs
tests/from_file/: mod.rs
tests/generate/: benchmarking.rs  end_to_end.rs  mod.rs
tests/resolve/: mod.rs
tests/scenarios/: catalog.rs  mod.proptest-regressions  mod.rs  scenario.rs
tests/withdrawal/: mod.rs
