[package]
name = "tx-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
csv = "1.4.0"
rust_decimal = { version = "1.40.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

[dev-dependencies]
claims = "0.8.0"
rstest = "0.26.1"
rust_decimal_macros = "1.40.0"
